--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ section::before {
 }
 
 #work-3:hover::after{
-    content: 'Software Project';
+    content: 'Application Project';
 }
 
 .contact {
